[gd_scene load_steps=8 format=3 uid="uid://bc66x7g6ehud3"]

[ext_resource type="Theme" uid="uid://c5kctcdtsyns5" path="res://Assets/UI/lobby_theme.tres" id="1_dwsbw"]
[ext_resource type="Script" path="res://Scripts/UI/LobbyManager.gd" id="1_m1h4i"]
[ext_resource type="PackedScene" uid="uid://ds284oabf5yhg" path="res://Assets/UI/Lobby/LobbyPlayerData.tscn" id="3_kenrh"]
[ext_resource type="Theme" uid="uid://dkar1sm71bbow" path="res://Assets/UI/Theme/debug_theme.tres" id="4_c2p5y"]
[ext_resource type="Script" path="res://Scenes/Menu/ready_button.gd" id="5_c44s8"]
[ext_resource type="Script" path="res://Scenes/Menu/PingLabel.gd" id="5_mxrw3"]
[ext_resource type="Texture2D" uid="uid://bhm7yurck1f4q" path="res://Assets/Sprites/ship2.png" id="6_umtpi"]

[node name="Lobby" type="Control" node_paths=PackedStringArray("StartButton", "PlayerList", "Lobby")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_m1h4i")
StartButton = NodePath("PanelContainer/MarginContainer/VBoxContainer/StartButton")
PlayerList = NodePath("PanelContainer/MarginContainer/VBoxContainer/PlayerList")
Lobby = NodePath(".")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayerList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_dwsbw")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList"]
layout_mode = 2
theme = ExtResource("1_dwsbw")

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.15
text = "ID"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList/HBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.95
text = "PSEUDO"

[node name="VSeparator2" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList/HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "ALLIANCE"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList"]
layout_mode = 2

[node name="PlayerData" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList" instance=ExtResource("3_kenrh")]
layout_mode = 2

[node name="PlayerData2" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList" instance=ExtResource("3_kenrh")]
layout_mode = 2

[node name="PlayerData3" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList" instance=ExtResource("3_kenrh")]
layout_mode = 2

[node name="ID" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList/PlayerData3" index="0"]
text = "2"

[node name="PlayerData4" parent="PanelContainer/MarginContainer/VBoxContainer/PlayerList" instance=ExtResource("3_kenrh")]
layout_mode = 2

[node name="ReadyButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_c2p5y")
toggle_mode = true
text = "READY
"
script = ExtResource("5_c44s8")

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "START
"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Ping :"
script = ExtResource("5_mxrw3")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color(0.407843, 1, 0.286275, 1)
layout_mode = 2
texture = ExtResource("6_umtpi")
expand_mode = 2

[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ReadyButton" to="." method="_on_ready_button_toggled"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_button_down"]

[editable path="PanelContainer/MarginContainer/VBoxContainer/PlayerList/PlayerData3"]
